--- a/status/music/mpd.yaml
+++ b/status/music/mpd.yaml
@@ -8,7 +8,7 @@ status:
 
     script: |
       @mpd = MPD.new
-      @mpd.connect
+      #@mpd.connect
       @mpd.password @password if @password
       at_exit { @mpd.disconnect }
 
